Fix: upload.html

--- a/src/app/pages/upload/upload.html
+++ b/src/app/pages/upload/upload.html
@@ -27,7 +27,7 @@
       <p class="dropzone-text">Arraste e solte suas radiografias aqui</p>
       <p class="dropzone-subtext">ou</p>
       <button type="button" class="select-button">Selecione os arquivos</button>
-      <p class="file-types">PNG, JPG, DICOM até 10MB</p>
+      <p class="file-types">PNG, JPG, JPEG até 10MB</p>
     </div>
   </div>
 
